# coursework

./: .gitignore  README.md  chatroom.py  dev.sqlite3  games.py  pyproject.toml  requirements.txt  schema.sql  server.py  whist.py  ws_server.py
docs/: serialisation.md
handlers/: whist.py
html/: create_game.html  home.html  join_game.html  rules.html
onlinecards/: database.py  schema.sql  server.py  ws_server.py
onlinecards/games/: whist.py
onlinecards/games/censor/: whist.py
onlinecards/handlers/: chatroom.py  utils.py  whist.py
onlinecards/static/css/: styles.css
onlinecards/static/js/: chatroom.js  cookie_banner.js  games_join.js  whist.js
onlinecards/templates/: base.html  chatroom.html  games_join_post.html  games_new_post.html  index.html  whist.html
static/css/: styles.css
static/js/: chatroom.js  games_new.js  whist.js
templates/: base.html  chatroom.html  create_game.html  games_join.html  games_join_post.html  games_new.html  games_new_post.html  home.html  index.html  rules.html  rules_whist.html  username.html  whist.html
